crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_comparison_ops_with_strings.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Select(
    SelectStatement {
        columns: All,
        from: Issues,
        filter: Some(
            Comparison {
                field: "title",
                op: Like,
                value: String(
                    "%bug%",
                ),
            },
        ),
        order_by: None,
        limit: None,
        offset: None,
    },
)
