crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_delete_targets-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Delete(
    DeleteStatement {
        entity: Issue(
            IssueId(
                "backend#456",
            ),
        ),
    },
)
