crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_field_keywords_in_create.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: "test",
        title: "T",
        kind: Bug,
        description: Some(
            "D",
        ),
        priority: Some(
            High,
        ),
        assignee: Some(
            UserId(
                "alice",
            ),
        ),
    },
)
