crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_update_targets-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Project(
            ProjectId(
                "backend",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "name",
                value: String(
                    "New Name",
                ),
            },
        ],
    },
)
