crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_update_targets-3.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#123",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "status",
                value: String(
                    "closed",
                ),
            },
        ],
    },
)
