crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_update_targets-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#456",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "priority",
                value: Priority(
                    High,
                ),
            },
        ],
    },
)
