crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_update_targets-5.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Comment(
            CommentId(
                "C789",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "content",
                value: String(
                    "updated",
                ),
            },
        ],
    },
)
