crates/iql-parser/src/snapshots/issuecraft_ql__tests__all_update_targets.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: User(
            UserId(
                "alice",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "email",
                value: String(
                    "new@test.com",
                ),
            },
        ],
    },
)
