crates/iql-parser/src/snapshots/issuecraft_ql__tests__boolean_values-2.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Update(
    UpdateStatement {
        entity: Issue(
            IssueId(
                "backend#1",
            ),
        ),
        updates: [
            FieldUpdate {
                field: "archived",
                value: Boolean(
                    false,
                ),
            },
        ],
    },
)
